use my fork of react picker

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "jquery": "latest",
     "react": "^0.14.3",
     "react-dom": "^0.14.0",
-    "react-picker": "^1.1.1"
+    "react-picker": "kevinhughes27/react-picker"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
